--- a/nlp.html
+++ b/nlp.html
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trustyou/bf231641-e271-4773-8e97-c100dc643795'>TrustYou - Data Analyst (Natural Language Processing)</a></h5> 
+<h5><a href='https://jobs.lever.co/trustyou/bf231641-e271-4773-8e97-c100dc643795'>TrustYou - Data Analyst (Natural Language Processing)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -110,7 +110,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/doZkuXzQYj/NLP-Engineer'>NLP Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/doZkuXzQYj/NLP-Engineer'>NLP Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -218,7 +218,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -311,7 +311,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='http://visiblealpha.recruiterbox.com/jobs/fk03fqj'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://visiblealpha.recruiterbox.com/jobs/fk03fqj'>
     Senior Software Engineer (NLP) at Visible Alpha
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
@@ -344,7 +344,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
+<h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
     Senior Software Engineer (NLP) at Visible Alpha
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
@@ -362,7 +362,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 machine learning to surface new knowledge. We are a VC-backed tech company
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 Ago 2019 ... Como Analista de Machine Learning na Axur, seu desafio ser? trabalhar com 
 processamento de linguagem natural, analisando dados e criando algoritmos 
@@ -377,7 +377,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
-<h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-08-31</p>
 <hr/>
@@ -412,7 +412,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
@@ -427,7 +427,7 @@ Barcelona. Review all of the job details and apply today!</p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Norweigan 
 in Barcelona. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amplexor.workable.com/j/72EF9FC811?viewed=true'>Senior NLP Engineer - Apply online - Amplexor - Jobs</a></h5> 
+<h5><a href='https://amplexor.workable.com/j/72EF9FC811?viewed=true'>Senior NLP Engineer - Apply online - Amplexor - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
@@ -443,7 +443,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
@@ -455,7 +455,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
